Fix style issues on maps page

--- a/pages/maps_demo.html
+++ b/pages/maps_demo.html
@@ -1,6 +1,13 @@
  <!DOCTYPE html>
 <html>
 <body>
+    <style>
+    iframe {
+      width: 400px;
+      height: 400px;
+      border: 1px solid black;
+    }
+  </style>
 <div id="super" class="container">
   <h2>Search Address or Enter Coordinates</h2>
   <input type="text" id="addressInput" placeholder="Enter address" style="width: 300px;" />
