--- a/pages/multistage_diagrams.html
+++ b/pages/multistage_diagrams.html
@@ -9,13 +9,13 @@
         These are run dynamically through the IMAGE server and rely on qwen, so results may vary!
         <div class="image-container">
             <!-- <img src="../images/960px-Animal_cell_cycle-en.svg.png" alt="Animal Cell Cycle"> -->
-            <img src="../images/mitosis.jpg" alt="Major events in mitosis">
-            <img src="../images/butterfly.png" alt="Butterfly Life Cycle">
+            <!--<img src="../images/mitosis.jpg" alt="Major events in mitosis">-->
+            <!--<img src="../images/butterfly.png" alt="Butterfly Life Cycle">-->
             <img src="../images/frog-life-cycle.jpg" alt="Frog Life Cycle">
             <img src="../images/jellyfish_qwen.jpeg" alt="Jellyfish Life Cycle">
             <img src="../images/cell_resized.jpg" alt="Cell Cycle">
-            <img src="../images/photosynthesis.jpg" alt="Photosynthesis">
-            
+            <!--<img src="../images/photosynthesis.jpg" alt="Photosynthesis">-->
+            <img src="../images/photosynthesis1.jpg" alt="Photosynthesis">
             <!-- <img src="../images/evolution.png" alt="Human Evolution (cached gemini)"> -->
             <!-- <img src="../images/jellyfish.jpeg" alt="Jellyfish Life Cycle (cached gemini)"> -->
         </div>
