--- a/pages/multistage_diagrams.html
+++ b/pages/multistage_diagrams.html
@@ -15,7 +15,7 @@
             <img src="../images/jellyfish_qwen.jpeg" alt="Jellyfish Life Cycle">
             <img src="../images/cell_resized.jpg" alt="Cell Cycle">
             <!--<img src="../images/photosynthesis.jpg" alt="Photosynthesis">-->
-            <img src="../images/photosynthesis1.jpg" alt="Photosynthesis">
+            <img src="../images/photosynthesis1.png" alt="Photosynthesis">
             <!-- <img src="../images/evolution.png" alt="Human Evolution (cached gemini)"> -->
             <!-- <img src="../images/jellyfish.jpeg" alt="Jellyfish Life Cycle (cached gemini)"> -->
         </div>
