--- a/pages/multistage_diagrams.html
+++ b/pages/multistage_diagrams.html
@@ -10,12 +10,14 @@
         <div class="image-container">
             <!-- <img src="../images/960px-Animal_cell_cycle-en.svg.png" alt="Animal Cell Cycle"> -->
             <!--<img src="../images/mitosis.jpg" alt="Major events in mitosis">-->
-            <!--<img src="../images/butterfly.png" alt="Butterfly Life Cycle">-->
-            <img src="../images/frog-life-cycle.jpg" alt="Frog Life Cycle">
+            <img src="../images/butterfly1.png" alt="Butterfly Life Cycle">
             <img src="../images/jellyfish_qwen.jpeg" alt="Jellyfish Life Cycle">
+            <img src="../images/frog-life-cycle.jpg" alt="Frog Life Cycle">
             <img src="../images/cell_resized.jpg" alt="Cell Cycle">
+            <img src="../images/turtle.png" alt="Sea Turtle Life Cycle">
             <!--<img src="../images/photosynthesis.jpg" alt="Photosynthesis">-->
-            <img src="../images/photosynthesis1.png" alt="Photosynthesis">
+            <img src="../images/photosynthesis2.png" alt="Photosynthesis">
+            <img src="../images/decision-tree.png" alt="Decision Tree">
             <!-- <img src="../images/evolution.png" alt="Human Evolution (cached gemini)"> -->
             <!-- <img src="../images/jellyfish.jpeg" alt="Jellyfish Life Cycle (cached gemini)"> -->
         </div>
