Trying resizing and removing the non working examples

--- a/pages/multistage_diagrams.html
+++ b/pages/multistage_diagrams.html
@@ -14,10 +14,10 @@
             <img src="../images/jellyfish_qwen.jpeg" alt="Jellyfish Life Cycle">
             <img src="../images/frog-life-cycle.jpg" alt="Frog Life Cycle">
             <img src="../images/cell_resized.jpg" alt="Cell Cycle">
-            <img src="../images/turtle.png" alt="Sea Turtle Life Cycle">
+            <img src="../images/turtle_resized.jpg" alt="Sea Turtle Life Cycle">
             <!--<img src="../images/photosynthesis.jpg" alt="Photosynthesis">-->
-            <img src="../images/photosynthesis2.png" alt="Photosynthesis">
-            <img src="../images/decision-tree.png" alt="Decision Tree">
+            <!--<img src="../images/photosynthesis2.png" alt="Photosynthesis">-->
+            <!--<img src="../images/decision-tree.png" alt="Decision Tree">-->
             <!-- <img src="../images/evolution.png" alt="Human Evolution (cached gemini)"> -->
             <!-- <img src="../images/jellyfish.jpeg" alt="Jellyfish Life Cycle (cached gemini)"> -->
         </div>
