Cleaning up unused graphics

--- a/pages/multistage_diagrams.html
+++ b/pages/multistage_diagrams.html
@@ -13,10 +13,10 @@
             <img src="../images/butterfly1.png" alt="Butterfly Life Cycle">
             <img src="../images/jellyfish_qwen.jpeg" alt="Jellyfish Life Cycle">
             <img src="../images/frog-life-cycle.jpg" alt="Frog Life Cycle">
-            <img src="../images/cell_resized.jpg" alt="Cell Cycle">
+            <!--<img src="../images/cell_resized.jpg" alt="Cell Cycle">-->
             <img src="../images/cell_cycle.jpg" alt="Cell Cycle">
-            <img src="../images/cell_cycle1.jpeg" alt="Cell Cycle">
-            <img src="../images/cell_cycle2.jpg" alt="Cell Cycle">
+            <!--<img src="../images/cell_cycle1.jpeg" alt="Cell Cycle">
+            <img src="../images/cell_cycle2.jpg" alt="Cell Cycle">-->
             <img src="../images/turtle_resized.jpg" alt="Sea Turtle Life Cycle">
             <!--<img src="../images/photosynthesis.jpg" alt="Photosynthesis">-->
             <!--<img src="../images/photosynthesis2.png" alt="Photosynthesis">-->
