--- a/pages/photos.html
+++ b/pages/photos.html
@@ -1,8 +1,21 @@
+
+
  <!DOCTYPE html>
 <html>
 <body>
 
-
-
+ <div id="super" class="container">
+        <h1>Live textbook diagram examples</h1>
+        These are run dynamically through the IMAGE server and rely on qwen, so results may vary!
+        <div class="image-container">
+            <img src="../images/birds.jpeg" alt="Birds at sunset"></br>
+            <img src="../images/soccerkids.jpg" alt="Soccer kids"></br>
+            <img src="../images/elephant.jpg" alt="Elephant"></br>
+            <img src="../images/horse.jpg" alt="Horse"></br>
+            <img src="../images/running_man.jpg" alt="Man running"></br>
+            <img src="../images/girl.jpg" alt="Girl waving hi"></br>
+            <img src="../images/plants.jpeg" alt="House Plants"></br>
+        </div>
+</div>
 </body>
 </html> 
