Split examples that do better after edits and label section

--- a/pages/photos.html
+++ b/pages/photos.html
@@ -5,11 +5,13 @@
 <body>
 
  <div id="super" class="container">
-        <h1>Live textbook diagram examples</h1>
-        These are run dynamically through the IMAGE server and rely on qwen, so results may vary!
+        <h1>Live photograph examples</h1>
         <div class="image-container">
             <img src="../images/birds.jpeg" alt="Birds at sunset" width="700"></br>
             <img src="../images/soccerkids.jpg" alt="Soccer kids" width="700"></br>
+        </div>
+        <p> Some more examples that work well after making some edits on TAT</p>
+        <div class="image-container">
             <img src="../images/elephant.jpg" alt="Elephant" width="700"></br>
             <img src="../images/horse.jpg" alt="Horse" width="700"></br>
             <img src="../images/running_man.jpg" alt="Man running" width="700"></br>
