Edit label for photos section

--- a/pages/photos.html
+++ b/pages/photos.html
@@ -10,7 +10,7 @@
             <img src="../images/birds.jpeg" alt="Birds at sunset" width="700"></br>
             <img src="../images/soccerkids.jpg" alt="Soccer kids" width="700"></br>
         </div>
-        <p> Some more examples that work well after making some edits on TAT</p>
+        <p> Some more examples that work well with edits on TAT</p>
         <div class="image-container">
             <img src="../images/elephant.jpg" alt="Elephant" width="700"></br>
             <img src="../images/horse.jpg" alt="Horse" width="700"></br>
