Update butterfly life cycle image in HTML

--- a/pages/multistage_diagrams.html
+++ b/pages/multistage_diagrams.html
@@ -10,7 +10,7 @@
         <div class="image-container">
             <!-- <img src="../images/960px-Animal_cell_cycle-en.svg.png" alt="Animal Cell Cycle"> -->
             <!-- <img src="../images/960px-Major_events_in_mitosis.svg.png" alt="Major events in mitosis"> -->
-            <!-- <img src="../images/ButterflyLifeCycleimage.png" alt="Butterfly Life Cycle"> -->
+            <img src="../images/Lifecycle-of-Butterfly-1024x683.jpg" alt="Butterfly Life Cycle"> 
             <img src="../images/frog-life-cycle.jpg" alt="Frog Life Cycle">
             <img src="../images/jellyfish_qwen.jpeg" alt="Jellyfish Life Cycle">
             <!-- <img src="../images/cell.jpeg" alt="Cell (cached gemini)"> -->
